[project]
name = "hana-agent"
version = "0.1.0"
description = "法人決算支援ツール - 月次仕訳自動化"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "pyyaml>=6.0",
]


[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
